--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -53,6 +53,8 @@
 
   "mpContextInvalidValueErrorMessage": "Ambos os campos são obrigatórios",
 
+  "mpCopyrightMessageLabel": "Direitos autorais",
+
   "mpDateIntervalEndDateHint": "AAAA[.MM[.DD[@HH[:MM[:SS[.SS]]]]]]",
   "mpDateIntervalEndDateLabel": "Data de término",
   "mpDateIntervalIntervalLabel": "Intervalo",
