--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -53,7 +53,18 @@
 
   "mpContextInvalidValueErrorMessage": "Ambos os campos são obrigatórios",
 
+  "mpCopyrightInvalidValueErrorMessage": "Por favor informe dados de direitos autorais vãlidos",
   "mpCopyrightMessageLabel": "Direitos autorais",
+
+  "mpCSEPSGESRILabel": "Identificador {csOption} (1-99999)",
+  "mpCSETRSLabel": "Identificador opcional ETRS (1-99999)",
+  "mpCSInvalidValueErrorMessage": "Por favor informe um valor válido",
+  "mpCSForOutputLabel": "Para saída",
+  "mpCSOSGBMajorLabel": "OSGB principal",
+  "mpCSOSGBMinorLabel": "OSGB menor",
+  "mpCSUTMZoneNumberLabel": "Número da zona UTM (1-60)",
+  "mpCSUTMNorthLabel": "Norte",
+  "mpCSUTMSouthLabel": "Sul",
 
   "mpDateIntervalEndDateHint": "AAAA[.MM[.DD[@HH[:MM[:SS[.SS]]]]]]",
   "mpDateIntervalEndDateLabel": "Data de término",
@@ -339,7 +350,7 @@
   "thCommandOptionClose": "Fechar",
   "thCommandOptionContext": "Contexto",
   "thCommandOptionCopyright": "Direitos Autorais",
-  "thCommandOptionCs": "CS",
+  "thCommandOptionCS": "CS",
   "thCommandOptionDateValue": "Data",
   "thCommandOptionDimensionsValue": "Dimensões",
   "thCommandOptionDist": "Distância",
