--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -77,6 +77,10 @@
 
   "mpDateValueInvalidValueErrorMessage": "Por favor informe uma data ou intervalo válidos",
 
+  "mpDimensionsAboveLabel": "Acima",
+  "mpDimensionsBelowLabel": "Abaixo",
+  "mpDimensionsInvalidValueErrorMessage": "Por favor informe valores válidos de dimensões",
+
   "mpLengthUnitCentimeter": "centímetro",
   "mpLengthUnitCentimeterAbbreviation": "cm",
   "mpLengthUnitFoot": "pé",
