--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -84,6 +84,8 @@
   "mpDistInvalidValueErrorMessage": "Por favor informe um valor válido de distância",
   "mpDistDistanceLabel": "Distância",
 
+  "mpExploredLengthLabel": "Extensão",
+
   "mpLengthUnitCentimeter": "centímetro",
   "mpLengthUnitCentimeterAbbreviation": "cm",
   "mpLengthUnitFoot": "pé",
