--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -86,6 +86,8 @@
 
   "mpExploredLengthLabel": "Extensão",
 
+  "mpExtendStationLabel": "Base",
+
   "mpLengthUnitCentimeter": "centímetro",
   "mpLengthUnitCentimeterAbbreviation": "cm",
   "mpLengthUnitFoot": "pé",
