--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -88,6 +88,9 @@
 
   "mpExtendStationLabel": "Base",
 
+  "mpIDInvalidValueErrorMessage": "Por favor informe um ID válido",
+  "mpIDIDLabel": "ID",
+
   "mpLengthUnitCentimeter": "centímetro",
   "mpLengthUnitCentimeterAbbreviation": "cm",
   "mpLengthUnitFoot": "pé",
