--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -442,6 +442,18 @@
     "type": "text"
   },
 
+  "mpIDInvalidValueErrorMessage": "Please enter a valid ID value.",
+  "@mpIDInvalidValueErrorMessage": {
+    "description": "The error message for invalid ID value",
+    "type": "text"
+  },
+
+  "mpIDIDLabel": "ID",
+  "@mpIDIDLabel": {
+    "description": "The label for the ID type",
+    "type": "text"
+  },
+
   "mpLengthUnitCentimeter": "centimeter",
   "@mpLengthUnitCentimeter": {
     "description": "The description for the centimeter length unit",
