--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -88,7 +88,7 @@
 
   "mpExtendStationLabel": "Base",
 
-  "mpIDInvalidValueErrorMessage": "Por favor informe um ID válido",
+  "mpIDInvalidValueErrorMessage": "IDs devem ser únicos.",
   "mpIDIDLabel": "ID",
 
   "mpLengthUnitCentimeter": "centímetro",
