More Option Widgets with validation and OkButton enabled control

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -277,8 +277,8 @@
     "type": "text"
   },
 
-  "mpCopyrightInvalidValueErrorMessage": "Invalid copyright info",
-  "@mpCopyrightInvalidValueErrorMessage": {
+  "mpCopyrightInvalidMessageErrorMessage": "Invalid copyright message",
+  "@mpCopyrightInvalidMessageErrorMessage": {
     "description": "The error message for invalid copyright value",
     "type": "text"
   },
