--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -53,7 +53,7 @@
 
   "mpContextInvalidValueErrorMessage": "Ambos os campos são obrigatórios",
 
-  "mpCopyrightInvalidValueErrorMessage": "Dados de direitos autorais inválidos",
+  "mpCopyrightInvalidMessageErrorMessage": "Mensagem de direitos autorais inválido",
   "mpCopyrightMessageLabel": "Direitos autorais",
 
   "mpCSEPSGESRILabel": "Identificador {csOption} (1-99999)",
