MPDimensionsOptionWidget with onOkButtonEnabled control

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -412,7 +412,7 @@
     "type": "text"
   },
 
-  "mpDimensionsInvalidValueErrorMessage": "Invalid numeric dimensions values",
+  "mpDimensionsInvalidValueErrorMessage": "Invalid dimension value",
   "@mpDimensionsInvalidValueErrorMessage": {
     "description": "The error message for invalid dimensions value",
     "type": "text"
