--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -79,7 +79,7 @@
 
   "mpDimensionsAboveLabel": "Acima",
   "mpDimensionsBelowLabel": "Abaixo",
-  "mpDimensionsInvalidValueErrorMessage": "Dimensões inválidas",
+  "mpDimensionsInvalidValueErrorMessage": "Valor inválida",
 
   "mpDistInvalidValueErrorMessage": "Distância inválida",
   "mpDistDistanceLabel": "Distância",
