--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -103,6 +103,9 @@
   "mpLengthUnitYard": "jarda",
   "mpLengthUnitYardAbbreviation": "yd",
 
+  "mpLineHeightInvalidValueErrorMessage": "Altura inválida",
+  "mpLineHeightHeightLabel": "Altura",
+
   "mpPersonNameInvalidFormatErrorMessage": "Nome inválido",
   "mpPersonNameLabel": "Nome",
   "mpPersonNameHint": "'PrimeiroNome Sobrenome' ou 'PrimeirosNomes/Sobrenomes'",
